[gd_scene load_steps=4 format=3 uid="uid://cjt7kac5xbhhi"]

[ext_resource type="Script" uid="uid://cnbq1w3bm8b7p" path="res://algorithms/randomness/randomdecay/scripts/random_decay_manger.gd" id="1_hct1x"]
[ext_resource type="PackedScene" uid="uid://bapvfdrc33ea2" path="res://commons/primitives/prismes/rotating_prisme.tscn" id="2_di8bd"]
[ext_resource type="PackedScene" uid="uid://0cbythiosykd" path="res://commons/primitives/panels/DigitalPaper/grab_paper.tscn" id="3_wykdb"]

[node name="RandomDecayObjects" type="Node3D"]
script = ExtResource("1_hct1x")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.236805, -0.0900505)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.739619, 0.673025, 0, -0.673025, 0.739619, 0.224728, 0.201911, 0.56354)

[node name="GrabPaper" parent="." instance=ExtResource("3_wykdb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.291126, 0, 0.313115)

[node name="Prism" parent="." instance=ExtResource("2_di8bd")]
visible = false

[connection signal="dropped" from="GrabPaper" to="." method="_on_grab_paper_dropped"]
[connection signal="grabbed" from="GrabPaper" to="." method="_on_grab_paper_grabbed"]
